Añadí las carpetas js y css

--- a/descuentos.html
+++ b/descuentos.html
@@ -10,7 +10,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;500;700&family=Roboto+Condensed:wght@300;400;700&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./css/style.css">
     <title>Porcentajes y descuentos</title>
 </head>
 
@@ -66,7 +66,7 @@
             </div>
         </div>
     </div>
-    <script src="descuentos.js"></script>
+    <script src="./js/descuentos.js"></script>
 </body>
 
 </html>
