--- a/figuras.html
+++ b/figuras.html
@@ -10,7 +10,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;500;700&family=Roboto+Condensed:wght@300;400;700&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./css/style.css">
     <title>Figuras geométricas</title>
 </head>
 
@@ -128,7 +128,7 @@
             </div>
         </div>
     </div>
-    <script src="figuras.js"></script>
+    <script src="./js/figuras.js"></script>
 </body>
 
 </html>
