--- a/promedioMedianaModa.html
+++ b/promedioMedianaModa.html
@@ -10,7 +10,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;500;700&family=Roboto+Condensed:wght@300;400;700&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./css/style.css">
     <title>Promedio, mediana y moda</title>
 </head>
 
@@ -48,7 +48,7 @@
             </div>
         </div>
     </div>
-    <script src="promedioMedianaModa.js"></script>
+    <script src="./js/promedioMedianaModa.js"></script>
 </body>
 
 </html>
