--- a/descuentos.html
+++ b/descuentos.html
@@ -12,24 +12,27 @@
         rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css">
     <title>Porcentajes y descuentos</title>
+    <style>
+        
+    </style>
 </head>
 
 <body>
     <nav>
-            <ul>
-                <li>
-                    <a href="https://www.linkedin.com/in/lucila-willington/" class="linkedin">@lucila-willington</a>
-                </li>
-                <li>
-                    <a href="./index.html">Inicio</a>
-                </li>
-                <li>
-                    <a href="./figuras.html">Figuras geométricas</a>
-                </li>
-                <li>
-                    <a href="./promedioMedianaModa.html">Promedio, mediana y moda</a>
+        <div id="header">
+            <ul class="nav">
+                <li><a href="">Menú</a>
+                    <ul>
+                        <li><a href="https://www.linkedin.com/in/lucila-willington/" class="linkedin">@lucila-willington</a></li>
+                        <li><a href="./index.html">Inicio</a></li>
+                        <li><a href="./descuentos.html">Porcentajes y descuentos</a></li>
+                        <li><a href="./figuras.html">Figuras geométricas</a></li>
+                        <li><a href="./promedioMedianaModa.html">Promedio, moda y mediana</a>
+                        </li>
+                    </ul>
                 </li>
             </ul>
+        </div>
     </nav>
     <h1>Porcentajes y descuentos</h1>
     <div class="row">
