--- a/promedioMedianaModa.html
+++ b/promedioMedianaModa.html
@@ -16,20 +16,20 @@
 
 <body>
     <nav>
-        <ul>
-            <li>
-                <a href="https://www.linkedin.com/in/lucila-willington/" class="linkedin">@lucila-willington</a>
-            </li>
-            <li>
-                <a href="./index.html">Inicio</a>
-            </li>
-            <li>
-                <a href="./descuentos.html">Porcentajes y descuentos</a>
-            </li>
-            <li>
-                <a href="./figuras.html">Figuras geométricas</a>
-            </li>
-        </ul>
+        <div id="header">
+            <ul class="nav">
+                <li><a href="">Menú</a>
+                    <ul>
+                        <li><a href="https://www.linkedin.com/in/lucila-willington/" class="linkedin">@lucila-willington</a></li>
+                        <li><a href="./index.html">Inicio</a></li>
+                        <li><a href="./descuentos.html">Porcentajes y descuentos</a></li>
+                        <li><a href="./figuras.html">Figuras geométricas</a></li>
+                        <li><a href="./promedioMedianaModa.html">Promedio, moda y mediana</a>
+                        </li>
+                    </ul>
+                </li>
+            </ul>
+        </div>
     </nav>
     <h1>Promedio, mediana y moda</h1>
     <div class="row">
